# AI-Native-Textbook-for-Physical-AI-Humanoid-Robotics-Updated-

./: .gitignore  agents_sdk_docs.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  agent.py  api.py  errors.py  main.py  models.py  pyproject.toml  retrieve.py  tools.py
examples/module-1/chapter-2/: ai_bridge_node.py  publisher_node.py  service_client.py  service_server.py  subscriber_node.py
examples/module-1/chapter-3/: humanoid_arm.urdf  simple_link.urdf  two_link_arm.urdf
frontend_book/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
frontend_book/docs/: intro.md
specs/001-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-agent-sdk/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ros2-module/: content-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-digital-twin-module/: content-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-nvidia-isaac-module/: content-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-vla-module/: content-model.md  plan.md  research.md  spec.md  tasks.md
specs/005-docusaurus-ui-upgrade/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-fastapi-rag-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: test_retrieve.py
(+123 files in other folders)
